Remove local Font Awesome and Fira fonts Fix navigation menu overflow in the Options

--- a/css/Modal.scss
+++ b/css/Modal.scss
@@ -45,6 +45,7 @@
 		& .footer {
 			position: relative;
 			height: auto;
+			box-sizing: border-box;
 		}
 		form .primary,
 		& .footer .primary {
