--- a/css/Options.scss
+++ b/css/Options.scss
@@ -85,6 +85,7 @@ html {
 }
 body {
 	height: 100vh;
+	max-height: 100vh;
 	display: flex;
 	flex-flow: column nowrap;
 	background-color: $grey-10;
@@ -117,6 +118,7 @@ hr {
 // Navigation
 nav {
 	padding: 16px;
+	box-sizing: border-box;
 
 	ul {
 		list-style-type: none;
